deploys/flask-app-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: flask-svc
spec:
  ports:
    - targetPort: 80
      port: 80
  selector:
      run: flaskapp
