deploys/ing_bak.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    ingress.kubernetes.io/ssl-redirect: "false"
  creationTimestamp: "2021-08-12T19:52:04Z"
  generation: 6
  name: nginx
  namespace: default
  resourceVersion: "15207"
  uid: 3490f545-e5fa-4f63-b450-1fe31738582f
spec:
  rules:
  - host: test.com
    http:
      paths:
      - backend:
          service:
            name: nginx-i-svc
            port:
              number: 80
        path: /
        pathType: Prefix
      - backend:
          service:
            name: nginx-am-svc
            port:
              number: 80
        path: /am/
        pathType: Prefix
status:
  loadBalancer:
    ingress:
    - ip: 172.18.0.2
    - ip: 172.18.0.3
