deploys/nginx-am-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx-am-svc
spec:
  ports:
    - targetPort: 80
      port: 80
  selector:
      run: nginx-am
