deploys/nginx-emoji-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx-emoji-svc
spec:
  ports:
    - targetPort: 80
      port: 80
  selector:
      run: nginx-emoji
