deploys/nginx-happy-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx-happy-svc
spec:
  ports:
    - targetPort: 80
      port: 80
  selector:
      run: nginx-happy
