deploys/nginx-I-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx-i-svc
spec:
  ports:
    - targetPort: 80
      port: 80
  selector:
      run: nginx-I
