deploys/nginx-sad-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx-sad-svc
spec:
  ports:
    - targetPort: 80
      port: 80
  selector:
      run: nginx-sad
