deploys/nginx-udo-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx-udo-svc
spec:
  ports:
    - targetPort: 80
      port: 80
  selector:
      run: nginx-udo
