deploys/nginx-udo.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    run: nginx
  name: nginx-deploy-3
spec:
  replicas: 1
  selector:
    matchLabels:
      run: nginx-udo
  template:
    metadata:
      labels:
        run: nginx-udo
    spec:
      containers:
      - image: nginx
        name: nginx
        volumeMounts:
        - mountPath: /usr/share/nginx/html
          name: webdata
      volumes:
      - name: webdata
      hostPath:
        path: /pod_data/dir3
